--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,10 +22,14 @@ module:
   field: 0
   field_ui: 0
   file: 0
+  file_mdm: 0
+  file_mdm_exif: 0
+  file_mdm_font: 0
   filter: 0
   help: 0
   history: 0
   image: 0
+  image_effects: 0
   jquery_ui: 0
   jquery_ui_autocomplete: 0
   jquery_ui_menu: 0
