--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -53,9 +53,11 @@ module:
   text: 0
   toolbar: 0
   tour: 0
+  tracer: 0
   update: 0
   user: 0
   views_ui: 0
+  webprofiler: 0
   views: 10
   standard: 1000
 theme:
