Exploring events in mymodule

--- a/web/modules/custom/mymodule/mymodule.info.yml
+++ b/web/modules/custom/mymodule/mymodule.info.yml
@@ -1,5 +1,5 @@
 name: 'Mymodule'
 type: module
-description: '@todo Add description.'
-package: '@todo Add package'
+description: 'Exploring events'
+package: 'Custom'
 core_version_requirement: ^10
